--- a/frontend/src/pages/Signup.css
+++ b/frontend/src/pages/Signup.css
@@ -40,8 +40,9 @@
 }
 
 .left-image {
-  width: 205%;
-    margin-top: -4rem;
+  width: 170%;
+  margin-left: -5rem;
+    margin-top: -2rem;
     position: relative;
 }
 
